[package]
name = "micro-rdk-modular-driver-examples"
version = "0.1.0"
edition = "2021"
authors = ["Matthew J Perez <matt@mperez.io>"]
resolver = "2"

[patch.crates-io]
esp-idf-sys = {git = "https://github.com/viamrobotics/esp-idf-sys.git"}

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
esp-idf-sys = { version = "0.33.1", features = ["binstart"] }
log = "0.4"
micro-rdk = {git = "https://github.com/viamrobotics/micro-rdk.git", features = ["esp32"]}

[package.metadata.com.viam]
module = true
